# dex-optimizer

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: bench_aos.rs  bench_aos_harness.rs  bench_soa.rs  bench_soa_harness.rs  pipeline.rs
benches/common/: mod.rs
datasets/: dataset.json
src/: csr_graph.rs  cycle_finder.rs  dataset.rs  edge_layouts.rs  error.rs  lib.rs  log_kernel.rs  main.rs
src/pipeline/: config.rs  mod.rs  producer.rs  searcher.rs  stats.rs  types.rs  writer.rs
