[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"


[[bench]]
name = "layout"
harness = false

[[bench]]
name = "pipeline"
harness = false
