[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[[bin]]
name = "bench_aos"
path = "benches/bench_aos.rs"

[[bin]]
name = "bench_soa"
path = "benches/bench_soa.rs"

[[bench]]
name = "bench_aos"
path = "benches/bench_aos_harness.rs"
harness = false

[[bench]]
name = "bench_soa"
path = "benches/bench_soa_harness.rs"
harness = false

[[bench]]
name = "pipeline"
harness = false
